tests/neg/i16842.check
-- [E007] Type Mismatch Error: tests/neg/i16842.scala:24:8 -------------------------------------------------------------
24 |  Liter(SemanticArray[SemanticInt.type], x) // error
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |        Found:    Int => SemanticArray[SemanticInt.type]
   |        Required: SemanticArray[SemanticType]
   |
   | longer explanation available when compiling with `-explain`
